--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="%PUBLIC_URL%/js/jquery-3.6.1.min.js"></script>
     <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
 
+    <!-- commented the below code out , i think you mistakenly uncommented it  -->
     
       <!-- Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
